<resources>
    <string name="app_name">TasteT</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="add_location_menu">Add Location</string>
    <string name="add_review_menu">Add Review</string>

    <string name="add_store_title">Add Location</string>
    <string name="add_store_name">Location Name</string>
    <string name="add_store_name_entry">Enter Name</string>
    <string name="add_store_address">Location Address</string>
    <string name="add_store_address_entry">Enter Address</string>
    <string name="add_store_type">Location Type</string>

    <string-array name="location_types">
        <item>Grocery Store</item>
        <item>Convenience Store</item>
        <item>Restaurant</item>
        <item>Fast Food</item>
        <item>Farmer\'s Market</item>
        <item>Other</item>
    </string-array>

    <string name="add_review_title">Add Review</string>
    <string name="add_review_name">Review Title</string>
    <string name="add_review_name_entry">Enter a title for this post</string>
    <string name="add_review_user">Reviewer Name</string>
    <string name="add_review_user_entry">Enter your name (optional)</string>
    <string name="add_review_rating_overall">Overall</string>
    <string name="add_review_rating_freshness">Freshness</string>
    <string name="add_review_rating_taste">Taste</string>
    <string name="add_review_rating_price">Price</string>
    <string name="add_review_text">Comments</string>
    <string name="add_review_text_entry">Enter any specific comments (optional)</string>
    <string name="map_search_text_hint">Search by Address...</string>

    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>


<string-array name="zoom_values_list_preference">
    <item>5</item>
    <item>10</item>
    <item>15</item>
    <item>25</item>

</string-array>

    <string-array name="zoom_list_preference">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>25</item>
    </string-array>

    <string name="store_name">Store Name</string>
    <string name="store_location">Store Location</string>
    <string name="store_type">Store Type</string>

    <string name="overall_rating">Overall</string>
    <string name="freshness_rating">Freshness</string>
    <string name="taste_rating">Taste</string>
    <string name="price_rating">Price</string>
    <string name="comments">Comments</string>



</resources>
