<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/LightTheme">


    <TextView
        android:id="@+id/review_page_store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"/>


    <!-- Location Address -->

   <!-- <TextView
        android:id="@+id/add_store_address"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:text="@string/store_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        />-->

    <TextView
        android:id="@+id/review_page_title_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"/>



    <!-- Location Type -->

    <!--<TextView
        android:id="@+id/store_type"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:text="@string/store_type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        />-->

    <TextView
        android:id="@+id/review_page_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/review_page_overall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:text="@string/overall_rating"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/review_page_overall_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:isIndicator="true"
        android:layout_marginStart="0dp"
        android:theme="@style/RatingBar" />


    <TextView
        android:id="@+id/review_page_freshness"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:text="@string/freshness_rating"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/review_page_freshness_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:isIndicator="true"
        android:layout_marginStart="0dp"
        android:theme="@style/RatingBar" />


    <TextView
        android:id="@+id/review_page_taste"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/taste_rating"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/review_page_taste_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:isIndicator="true"
        android:layout_marginStart="0dp"
        android:theme="@style/RatingBar" />


    <TextView
        android:id="@+id/review_page_price"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:text="@string/price_rating"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/review_page_price_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:isIndicator="true"
        android:layout_marginStart="0dp"
        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:text="@string/comments"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"

        />

    <TextView
        android:id="@+id/review_page_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#000000"
        android:singleLine="false"
        />


</LinearLayout>
