<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<!-- Title -->

	<TextView
		android:id="@+id/TitleLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/title_home"
		android:textAppearance="?android:attr/textAppearanceLarge" >
	</TextView>

	<EditText
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/TitleLabel"
		android:ems="10"
		android:hint="@string/title_home"
		android:inputType="textShortMessage" >

		<requestFocus />
	</EditText>

	<!-- Status -->

	<TextView
		android:id="@+id/status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/title"
		android:layout_marginTop="8dp"
		android:text="@string/title_home"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<RadioGroup
		android:id="@+id/statusGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/status"
		android:orientation="horizontal" >

		<RadioButton
			android:id="@+id/statusDone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title_home" />

		<RadioButton
			android:id="@+id/statusNotDone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/title_home" />
	</RadioGroup>

	<!-- Priority -->

	<TextView
		android:id="@+id/priority"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/statusGroup"
		android:layout_marginTop="8dp"
		android:text="@string/title_home"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<RadioGroup
		android:id="@+id/priorityGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/priority"
		android:orientation="horizontal"
		android:text="@string/title_home" >

		<RadioButton
			android:id="@+id/lowPriority"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title_home" />

		<RadioButton
			android:id="@+id/medPriority"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/title_home" />

		<RadioButton
			android:id="@+id/highPriority"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title_home" />
	</RadioGroup>

	<!-- Time and Date -->

	<TextView
		android:id="@+id/time_and_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/priorityGroup"
		android:layout_marginTop="8dp"
		android:text="@string/title_home"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
		android:id="@+id/date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/time_and_date"
		android:layout_marginTop="8dp"
		android:text="@string/title_home" />

	<TextView
		android:id="@+id/time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/time_and_date"
		android:layout_marginTop="8dp"
		android:text="@string/title_home" />

	<Button
		android:id="@+id/date_picker_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_marginTop="8dp"
		android:layout_below="@id/date"
		android:text="@string/title_home" />

	<Button
		android:id="@+id/time_picker_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignTop="@id/date_picker_button"
		android:layout_below="@id/time"
		android:layout_marginTop="8dp"
		android:text="@string/title_home" />

	<!-- Buttons -->

	<Button
		android:id="@+id/cancelButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:text="@string/cancel" />

	<Button
		android:id="@+id/resetButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:text="@string/title_home" />

	<Button
		android:id="@+id/submitButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:text="@string/submit" />

</RelativeLayout>